src/objects/QPMS__Assessment_Questions_Template__c.object
<CustomObject>
    <description>This is Assessment questions template.</description>
    <fields>
        <fullName>QPMS__Assessment_Library_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used store assessment  template</description>
        <label>Assessment Library Template</label>
        <referenceTo>QPMS__Assessment_Template__c</referenceTo>
        <relationshipLabel>Assessment Questions Templates</relationshipLabel>
        <relationshipName>Assessment_Questions_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Assessment_Question__c</fullName>
        <description>This field is used to stores assessment question</description>
        <label>Assessment Question</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__ExternalId__c</fullName>
        <description>For Assessment</description>
        <externalId>true</externalId>
        <label>ExternalId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>QPMS__External_Id__c</fullName>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__QuestionExt__c</fullName>
        <description>This field is used to store external id</description>
        <label>QuestionExt</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Question_Number__c</fullName>
        <label>Question Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Assessment Questions Template</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Assessment Questions Template Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assessment Questions Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>